# routes/index.js
@@ -1,8 +1,12 @@
-const express = require('express')
-const router = express.Router()
+const express = require('express');
+const router = express.Router();
 
-const listing = require('./listing.js')
+const listing = require('./listing.js');
 
-router.get("/listings", listing.get)
+router.get("/listings", listing.getAll);
+router.get("/listing/:id", listing.get);
+router.post("/listing", listing.post);
+router.put("/listing/:id", listing.put);
+router.delete("/listing/:id", listing.del);
 
-module.exports = router
+module.exports = router;
